<resources>
    <string name="app_name">YayatoPartnerApp</string>
    <string name="logo">Logo</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="api_key" translatable="false">AIzaSyA9RhUjM4t6hd1FZn671IXvE4m4Ijw87T0</string>
    <string name="login">Login</string>
    <string name="login_wth_otp">Login with OTP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_picture">Upload picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city_name">City name</string>
    <string name="address">Address</string>
    <string name="term_text">I accept all the <font fgcolor="#3EB24D">Terms and Conditions</font></string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="terms_condition_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="we_sent_6_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="upload_documents">Upload Document</string>
    <string name="upload_cni_of_vehicle">Upload CNI of Vehicle</string>
    <string name="driving_license_copy">Driving License Copy</string>
    <string name="my_wallet">My Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="transfer">Transfer</string>
    <string name="transaction">Transaction</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="choose_or_enter_amt">Choose or enter amount</string>
    <string name="send_money">Send Money</string>
    <string name="its_safe_and_secure">It\'s Safe And Secure</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="enter_amt">Enter Amount</string>
    <string name="add_vehicle">Upload Vehicle</string>
    <string name="upload_your_vehicle">Upload Your Vehicle</string>
    <string name="select_vehicle_model">Select Vehicle Make</string>
    <string name="select_vehicle_brand">Select Vehicle Model</string>
    <string name="number_plate">Number Plate</string>
    <string name="select_time_when_you_want_your_vehicle_for_service">Select Start And End Date Time When You Want Your Vehicle For Service</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="home">Home</string>
    <string name="ride_history">Ride History</string>
    <string name="active_rides">Active Rides</string>
    <string name="edit_profiel">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="uploaded_vehicles">Uploaded Vehicles</string>
    <string name="accept">Accept</string>
    <string name="charge_km">Charge Per km</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="pick_vehicle_from">Pick Vehicle From</string>
    <string name="charge_per_hr">Charge Per Hour</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="requests">Requests</string>
    <string name="driver_requests">Driver Requests</string>
    <string name="add_vehicles">Add Vehicles</string>
    <string name="comment">Comment</string>
    <string name="show_me_drivers_request">Show Me Drivers Request</string>
    <string name="facebook_app_id">906560946896016</string>
    <string name="fb_login_protocol_scheme">fb906560946896016</string>
    <string name="or_login_with_social_account">Or Login with social account</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="update_picture">Update Picture</string>
    <string name="save_details">Save Details</string>
    <string name="services">Services</string>
    <string name="select_services">Select Service</string>
    <string name="on">ON</string>
    <string name="rental_taxi">Rental Taxi</string>
    <string name="next">Next</string>
    <string name="select_pick_up_address">Select Pickup Address</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="select_pickup_and_dropoff_address">Select Pick and Drop Location</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="book_ride">Book Ride</string>
    <string name="estimated_trip_time">Estimated Time</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="cash">Cash Pay</string>
    <string name="card">Card Pay</string>
    <string name="wallet_pay">Wallet Pay</string>
    <string name="searching_for_a_driver">Searching for driver...</string>
    <string name="rate">Rate</string>
    <string name="ok">Ok</string>
    <string name="do_payment">Do Payment</string>
    <string name="ride_has_ended">Ride Has Ended</string>
    <string name="find_pool">Find Pool</string>
    <string name="find_drivers_in_this_route">Find Drivers In this Route</string>
    <string name="send_request_to_driver">Send Request To Driver</string>
    <string name="available_drivers">Available Drivers</string>
    <string name="msg">message</string>
    <string name="pool_request">Pool Request</string>
    <string name="request_accepted">Request Accepted!</string>
    <string name="track_diver">Track Driver</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="your_request_is_successfully_accepted">Your request is successfully accepted !</string>
    <string name="password_validation_text">Password should be greater than 4 digits</string>
    <string name="reset_pass_msg">Reset password link sent to your mail-id</string>
    <string name="please_upload_profile">Please upload profile picture</string>
    <string name="enter_name_text">Please enter your name</string>
    <string name="enter_name_firsttext">Please enter your first name</string>
    <string name="enter_name_lasttext">Please enter your last name</string>
    <string name="enter_phone_text">Please enter your phone number</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="please_check_internet">Please check your connection!</string>
    <string name="check_internet_text">Please check your internet connection!</string>
    <string name="enter_email_text">Please enter email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="enter_address1_text">Please select Address</string>
    <string name="please_accept_term_con">Please accept terms and condition</string>
    <string name="user_already_exits">User Already Exists</string>
    <string name="email_not_found">Email Not Found</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="vehicle_type">Select Vehicle Type</string>
    <string name="no_data_found">No Data Found</string>
    <string name="select_vehicle_type">Please select vehicle type</string>
    <string name="enter_number_plate">Please enter lisence plate number</string>
    <string name="add_year_vehicle_text">Please select manufactured year of vehicle</string>
    <string name="upload_vehicle_text">Please upload vehicle image</string>
    <string name="enter_start_time">Please select start time</string>
    <string name="enter_end_time">Please select end time</string>
    <string name="enter_email">Please enter email</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_valid_amount">Please enter valid amount</string>
    <string name="no_booking_available">no booking available</string>
    <string name="login_sucess">Login successfully</string>
    <string-array name="taxi_type">
        <item>Select Vehicle Type</item>
        <item>Bike</item>
        <item>Car</item>
    </string-array>
    <string-array name="taxi_model">
        <item>Chevrolet Silverado</item>
        <item>Toyota RAV4</item>
        <item>Honda CR-V</item>
        <item>Toyota Camry</item>
        <item>Other</item>
    </string-array>
    <string-array name="taxi_brand">
        <item>Hero Honda</item>
        <item>Maruti Suzuki Mahindra</item>
        <item>Volkswagen Tata</item>
        <item>Toyota Kia</item>
        <item>Other</item>
    </string-array>
    <string-array name="service_type">
        <item>Select Service Type</item>
        <item>Car Pool/Ride Share</item>
        <item>Classic Taxi</item>
    </string-array>
    <string-array name="select_year">
        <item>Select Year of Manufactured</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
    </string-array>
</resources>