<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/upload_documents"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:background="@drawable/dotted_black_back"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">

            <ImageView
                android:id="@+id/add"
                android:layout_width="@dimen/_30sdp"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:src="@drawable/add_icon"
                android:layout_height="@dimen/_30sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_below="@+id/add"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/upload_cni_of_vehicle"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/ivDriverLicense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:background="@drawable/dotted_black_back"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp">

            <ImageView
                android:id="@+id/add1"
                android:layout_width="@dimen/_30sdp"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:src="@drawable/add_icon"
                android:layout_height="@dimen/_30sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add1"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/driving_license_copy"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/ivRegistrationCertify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/login_bt_back"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>