<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/rlLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vvLine"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rounded_white_bg"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pick_vehicle_from"
            android:visibility="gone"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:background="@drawable/green_oval"
                android:elevation="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvPickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="53, Kamdhenu Shopping Centre, Lokhandwala Complex, Andheri (west)"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/carImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="0.2"
                android:src="@drawable/car" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="Available From \n11:00 AM - 7:00 PM"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/charge_per_hr"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="5$/Hr"
                android:textColor="@color/red"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/vehicle_model"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvVehicleModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="Hatchback"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/vehicle_number"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvCarNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="sfsfsdfdsf"
                android:textColor="@color/green_spalsh"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShowDrivers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:background="@drawable/purpal_back_5"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/show_me_drivers_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>