<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/white_above_back"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:text="@string/add_money"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_or_enter_amt"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivMinus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="0.3"
                    android:src="@drawable/minu_icon" />

                <EditText
                    android:id="@+id/etMoney"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivPlus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="0.3"
                    android:src="@drawable/add_icon_green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv699"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:background="@drawable/green_back"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="699"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv799"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:background="@drawable/green_back"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="799"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv899"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:background="@drawable/green_back"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="899"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@drawable/login_bt_back"
                android:padding="@dimen/_10sdp"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </RelativeLayout>

</layout>